--- a/estilo.css
+++ b/estilo.css
@@ -261,65 +261,24 @@ body {
     margin: 10%;
 }
 
-#slider {
-    position: relative;
-    width: 500px;
-    height: 265px;
-    overflow: hidden;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+.slide {
+    margin-top: 6vh;
 }
-
-#slider ul {
-    position: relative;
-    list-style: none;
-    height: 100%;
-    width: 10000%;
-    padding: 0;
-    margin: 0;
-    transition: all 750ms ease;
-    left: 0;
-}
-
-#slider ul li {
-    position: relative;
-    height: 100%;
-    float: left;
-}
-
-#slider ul li img {
-    width: 500px;
-    height: 265px;
-}
-
-#slider #prev,
-#slider #next {
+/* 
+.transferencia {
+    display: flex;
+    flex-direction: row;
+    height: 10px;
     width: 50px;
-    line-height: 50px;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    position: absolute;
-    top: 50%;
-    border-radius: 50%;
-    font-size: 2rem;
-    text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-    transform: translateY(-50%);
-    transition: all 150ms ease;
+    border-radius: 10px;
+    border: 1px black;
 }
+.rojo {
+    background-color: red;
+    width: 10px;
+    height: 10px;
+} */
 
-#slider #prev {
-    left: 10px;
-}
-
-#slider #next {
-    right: 10px;
-}
-
-#slider #prev:hover,
-#slider #next:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-    text-shadow: 0;
-}
 
 
 @media (min-width: 1150px) {
@@ -410,6 +369,12 @@ body {
     .adidas {
         margin-top: 2.2vh;
     }
+    .sliderContainer {
+        display: flex;
+    }
+    .tablaSlide img{
+        margin-top: 2vh;
+    }
 }
 
 /* BOTON FIXED */
@@ -433,7 +398,7 @@ body {
 }
 .arriba:hover{
     background-color: rgb(14, 15, 54);
-    box-shadow: rgb(24, 25, 99) 5px 5px 10px;
+    box-shadow: rgb(24, 25, 99) 2px 2px 10px;
 }
 .arriba img {
     width: 70%;
