--- a/estilo.css
+++ b/estilo.css
@@ -28,7 +28,9 @@ html {
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
 }
-
+.marcoFoto {
+    width: 1000px;
+}
 .titulos {
     font-size: 4rem;
 }
@@ -264,24 +266,48 @@ body {
 .slide {
     margin-top: 6vh;
 }
-/* 
-.transferencia {
+.messiCont img {
+    width: 600px;
+}
+/* .transferencia {
     display: flex;
     flex-direction: row;
     height: 10px;
-    width: 50px;
+    width: 150px;
     border-radius: 10px;
     border: 1px black;
+    margin-left: 100vh;
 }
 .rojo {
     background-color: red;
-    width: 10px;
+    width: 30px;
+    height: 10px;
+}
+.naranja {
+    background-color: orangered;
+    width: 30px;
+    height: 10px;
+}  
+.amarillo {
+    background-color: orange;
+    width: 30px;
+    height: 10px;
+} 
+.verdeClaro {
+    background-color: greenyellow;
+    width: 30px;
+    height: 10px;
+} 
+.verdeOscuro {
+    background-color: green;
+    width: 30px;
     height: 10px;
 } */
 
 
 
-@media (min-width: 1150px) {
+
+@media (min-width: 1100px) {
     .imagenesContainer {
         display: flex;
         flex-direction: row;
@@ -358,7 +384,7 @@ body {
         margin-top: 0;
     }
     .heiContainer {
-        width: 60%;
+        width: 50%;
         display: flex;
         justify-content: end;
     }
@@ -375,8 +401,10 @@ body {
     .tablaSlide img{
         margin-top: 2vh;
     }
+    .duoContainer h3 {
+        margin-left: 5px;
+    }
 }
-
 /* BOTON FIXED */
 
 
